Fixes card overlay scrollbar

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -2,32 +2,30 @@
   display: inline-block;
   position: relative;
   border: 1px solid white;
-  overflow: hidden;
   cursor: default;
+  width: 343px;
+  height: 516px;
+  background-size: cover;
+  background-color: black;
+  overflow-y: scroll;
 
-  img{
-    transition: filter 0.2s;
-    width: 343px;
-    height: 516px;
+  &::-webkit-scrollbar {
+    background: transparent;
+    width: 0px;
   }
+  
 
   ul{
+    min-height: 100%;
+    opacity: 0;
     position: absolute;
-    top:50px;
     padding: 10px;
     color:white;
-    opacity: 0;
-    transition: opacity 0.3s;
     list-style: none;
-  }
+    background-color: black;
+    transition: opacity 0.3s;
 
-
-  &:hover{
-    img{
-      filter: brightness(0);
-    }
-
-    ul{
+    &:hover{
       opacity: 1;
     }
   }
